--- a/pepeizqs deals web/Pages/Componentes/Admin/Gratis.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Gratis.razor
@@ -8,27 +8,30 @@
 			<label style="margin-bottom: 10px;">Juego:</label>
 			<input type="text" @oninput="TextoCambiaBuscador" class="entrada-texto" />
 
-			@if (juegosBuscador.Count > 0)
+			@if (juegosBuscador != null)
 			{
-				<div>
-					@foreach (var juego in juegosBuscador)
-					{
-						<div class="perfil-flexible-centrado perfil-espacio-top">
-							<button @onclick="@(e => ClickearJuego(e, @juego.Id.ToString(), @juego.Nombre, juego.Imagenes.Library_600x900))" class="boton-pequeño" style="text-align:center;">
-								<div class="perfil-flexible-centrado">
-									<div style="width: 12%;">
-										<img src="@juego.Imagenes.Capsule_231x87" style="max-height:100%; max-width:100%;" />
-									</div>
+				@if (juegosBuscador.Count > 0)
+				{
+					<div>
+						@foreach (var juego in juegosBuscador)
+						{
+							<div class="perfil-flexible-centrado perfil-espacio-top">
+								<button @onclick="@(e => ClickearJuego(e, @juego.Id.ToString(), @juego.Nombre, juego.Imagenes.Library_600x900))" class="boton-pequeño" style="text-align:center;">
+									<div class="perfil-flexible-centrado">
+										<div style="width: 12%;">
+											<img src="@juego.Imagenes.Capsule_231x87" style="max-height:100%; max-width:100%;" />
+										</div>
 
-									<div style="width: 88%; padding-left: 15px; padding-right: 15px; text-align: left;">
-										@juego.Id - @juego.Nombre
+										<div style="width: 88%; padding-left: 15px; padding-right: 15px; text-align: left;">
+											@juego.Id - @juego.Nombre
+										</div>
 									</div>
-								</div>
-							</button>
-						</div>
-					}
-				</div>
-			}
+								</button>
+							</div>
+						}
+					</div>
+				}
+			}			
 		</div>
 	}
 	else
@@ -101,7 +104,7 @@
 	{
 		if (texto.Value.ToString().Trim().Length > 1)
 		{
-			juegosBuscador = BaseDatos.Juegos.Buscar.Nombre(texto.Value.ToString().Trim());
+			juegosBuscador = BaseDatos.Juegos.Buscar.Nombre(texto.Value.ToString().Trim(), false);
 		}
 		else
 		{
