--- a/pepeizqs deals web/Pages/Componentes/Admin/Pendientes.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Pendientes.razor
@@ -149,7 +149,7 @@
 		if (texto.Value.ToString().Trim().Length > 1)
 		{
 			cadenaBusqueda = texto.Value.ToString().Trim();
-			juegosBuscador = BaseDatos.Juegos.Buscar.Nombre(cadenaBusqueda);
+			juegosBuscador = BaseDatos.Juegos.Buscar.Nombre(cadenaBusqueda, true);
 		}
 		else
 		{
@@ -180,6 +180,6 @@
 	{
 		BaseDatos.Juegos.Borrar.Ejecutar(id);
 
-		juegosBuscador = BaseDatos.Juegos.Buscar.Nombre(cadenaBusqueda);
+		juegosBuscador = BaseDatos.Juegos.Buscar.Nombre(cadenaBusqueda, true);
 	}
 }
