--- a/pepeizqs deals web/Pages/Componentes/Admin/Suscripciones.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Suscripciones.razor
@@ -107,7 +107,7 @@
 		if (texto.Value.ToString().Trim().Length > 1)
 		{
 			cadenaBusqueda = texto.Value.ToString().Trim();
-			juegosBuscador = BaseDatos.Juegos.Buscar.Nombre(cadenaBusqueda);
+			juegosBuscador = BaseDatos.Juegos.Buscar.Nombre(cadenaBusqueda, false);
 		}
 		else
 		{
