--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -150,6 +150,14 @@
 
     <script src="_framework/blazor.server.js"></script>
 
+    <script>
+        Blazor.start().then(() => {
+            Blazor.defaultReconnectionHandler._reconnectCallback = function (d) {
+                document.location.reload();
+            }
+        });
+    </script>
+
     <div id="components-reconnect-modal" style="display: none"/>
 
     @await RenderSectionAsync("Scripts", required: false)
